# LogicFlow

./: .gitignore  Asgn.h  BinOp.cpp  BinOp.h  CMakeCache.txt  CMakeLists.txt  Call.cpp  Call.h  Env.cpp  Env.h  Exception.cpp  Expr.cpp  Expr.h  ExpressionGrammar.txt  Func.h  Grouping.h  Interpreter.cpp  Interpreter.h  LICENSE  Lexer.cpp  Lexer.h  Lit.h  Logical.cpp  Logical.h  Makefile  MySet.cpp  Parser.cpp  Parser.h  PrimObj.cpp  PrimObj.h  README.md  Stmt.cpp  Stmt.h  Tok.cpp  Tok.h  Unary.cpp  Unary.h  Var.h  \  ]  (+6 more)
.cache/clangd/index/: Env.cpp.0827F556D954DEBA.idx  Env.h.19DCCB7CFD1A4ED0.idx  Exception.h.7785F3306ADC7869.idx  Expr.cpp.F7F8B5FC2F48D425.idx  Expr.h.D5D6C63EFC033DD0.idx  Interpreter.cpp.4A6617BE1AF095CF.idx  Interpreter.h.B12DBF4CEFFD811F.idx  Lexer.cpp.9BAB76214514D4CB.idx  Lexer.h.0A48821564258091.idx  MySet.cpp.62C5759E87A1FAB7.idx  MySet.h.9CFDC852D1C7DDA2.idx  Parser.cpp.264D8777C4D5FB15.idx  Parser.h.11F032686EDB5371.idx  PrimObj.cpp.C2A5A2847F12F838.idx  PrimObj.h.E215F9DC39F73191.idx  Stmt.cpp.4914826022E081AF.idx  Stmt.h.34442F333A3D5081.idx  Tok.cpp.C66F04557CBB51CB.idx  Tok.h.6D14429122D687BB.idx  main.cpp.035E290B62A8B449.idx
.cmake/api/v1/reply/: index-2024-06-07T22-35-19-0739.json
.github/workflows/: main.yml
Headers/: Exception.h  Expr.h  Lexer.h  PrimObj.h  Stmt.h  Tok.h
include/: Env.h  Exception.h  Expr.h  Interpreter.h  Lexer.h  MySet.h  Parser.h  PrimObj.h  Stmt.h  Tok.h
src/: Env.cpp  Expr.cpp  Interpreter.cpp  Lexer.cpp  MySet.cpp  Parser.cpp  PrimObj.cpp  Stmt.cpp  Tok.cpp  main.cpp
